docs: record completion drain validation